--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-
+        <form action=""></form>
     </header>
     <nav>
-
+        <img src="" alt="">
     </nav>
     
 </body>
