B.R.H enfim o js do nav está concluído

--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -10,11 +10,11 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div id="menu1">
-            <p><span class="material-icons">menu</span>MENU</p>
+            <p id="MenuC"><span class="material-icons">menu</span>MENU</p>
         </div>
-        <div id="menuNav">
+        <div id="menuNav" class="hidden">
             <ol>
                 <a href="#" class="navs">HOME</a>
                 <a href="#" class="navs">QUEM SOU</a>
@@ -25,5 +25,7 @@
             </ol>
         </div>
     </header>
+
+    <script src="JS/port.js"></script>
 </body>
 </html>
