--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <div id="menu1">
-            <p id="MenuControl"><span class="material-icons">menu</span>MENU</p>
+            <p id="MenuControl">MENU<span class="material-icons">menu</span></p>
         </div>
         <div id="menuNav" class="hidden">
             <ol>
