--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body onload="load()">
     <header id="header">
         <div id="menu1">
             <p id="MenuControl">MENU<span class="material-icons">menu</span></p>
@@ -25,7 +25,11 @@
             </ol>
         </div>
     </header>
-
+    <main>
+        <div id="mainBody">
+            
+        </div>
+    </main>
     <script src="JS/port.js"></script>
 </body>
 </html>
