--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -26,6 +26,12 @@
         </div>
     </header>
     <main>
+        <div id="imagem1">
+            <div id="logo">
+                <img src="imagens/LOGOPORT.png" alt="logo">
+            </div>
+        </div>
+        
         <div id="mainBody">
             
         </div>
