--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -33,8 +33,8 @@
             
                 <img id="alpha" src="imagens/alpha.png" alt="alpha">
                 <img id="lambda" src="imagens/lambda.png" alt="lambda">
-                <img id="alpha" src="imagens/epslon.png" alt="epslon">
-                <img id="alpha" src="imagens/fi.png" alt="phi">
+                <img id="epsilon" src="imagens/epslon.png" alt="epslon">
+                <img id="phi" src="imagens/fi.png" alt="phi">
             </div>
         </div>
         
