--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -31,7 +31,7 @@
                 <img id='princ' src="imagens/LOGOPORT.png" alt="logo">
                 
             
-                <img id="alpha" class="testAlpha" src="imagens/alpha.png" alt="alpha">
+                <img id="alpha" src="imagens/alpha.png" alt="alpha">
                 <img id="lambda" class="lef" src="imagens/lambda.png" alt="lambda">
                 <img id="epsilon" class="lef" src="imagens/epslon.png" alt="epslon">
                 <img id="phi" class="lef" src="imagens/fimin.png" alt="phi">
