--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -39,7 +39,30 @@
         </div>
         
         <div id="mainBody">
-            
+            <div id="who">
+                <h1>Olá,</h1>
+                <p>sou Alef, estudante do terceiro ano do ensino médio, iniciante na área de desenvolvimento do lado do cliente (client side) Fron-End.</p>
+                <p>Trabalho atualmente com desenvolvimento web.</p>
+            </div>
+        </div>
+
+        <div id="habilidades">
+            <ul>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Saas</li>
+            </ul>
+        </div>
+
+        <div id="do">
+            <h1>O que faço</h1>
+            <p>serviços e soluções</p>
+            <h2>Desenvolvimento Web</h2>
+        </div>
+
+        <div id="Portfolio">
+            ###
         </div>
     </main>
     <script src="JS/port.js"></script>
