Atualização Quem Sou

--- a/portifolio2/index.html
+++ b/portifolio2/index.html
@@ -41,7 +41,7 @@
         <div id="mainBody">
             <div id="who">
                 <h1>Olá,</h1>
-                <p>sou Alef, estudante do terceiro ano do ensino médio, iniciante na área de desenvolvimento do lado do cliente (client side) Fron-End.</p>
+                <p>sou Alef, iniciante na área de desenvolvimento do lado do cliente (client side) Fron-End.</p>
                 <p>Trabalho atualmente com desenvolvimento web.</p>
             </div>
         </div>
