Atualização do projeto alpha

--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -26,20 +26,54 @@
         </div>
     </header>
     <main>
-        
+        <section class="home-main-banner">
+            <div class="alfbt">
+                <div id="alpha"></div>
+                <div id="lambda"></div>
+                <div id="epsilon"></div>
+                <div id="phi"></div>
+            </div>
+        </section>
         <section id="introducao">
-                <h1>Olá,</h1>
+                <h2 class="h1">Olá,</h2>
                 <p>sou Alef, iniciante na área de desenvolvimento Fron-End.</p>
                 <p>Trabalho atualmente com desenvolvimento web.</p>
+                <p></p>
         </section>
 
-        <section id="habilidades">
+        <!-- End // Home About -->
+
+        <section class="skills">
+            MINHAS SKILLS E POWER UP'S
+            <div></div>
             <ul>
-                <li>JavaScript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>Saas</li>
+                <div>
+                    <div>
+                        <div>
+                            <li>JavaScript</li>
+                        </div>
+                        <div>
+                            <li>HTML5</li>
+                        </div>
+                        <div>
+                            <li>CSS3</li>
+                        </div>
+                        <div>
+                            <li>Saas</li>
+                        </div>
+                    </div>
+                    <div class="setas" disabled>
+
+                    </div>
+                </div>
+                <div class="bottons">
+                    <input type="radio" name="sk-op" id="button" value="1e">
+                    <input type="radio" id="button" name="sk-op" value="2m">
+                    <input type="radio" name="sk-op" id="button" value="3d" checked>
+                </div>
+                
             </ul>
+            <!-- End// Skills -->
         </section>
 
         <section id="o-que-faco">
@@ -56,5 +90,6 @@
         <!--HERE CONTATO-->
     </footer>
     <script type="module" src="JS/menu.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
