--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -28,10 +28,10 @@
     <main>
         <section class="home-main-banner">
             <div class="alfbt" id="alfbt">
-                <div id="alpha"></div>
-                <div id="lambda"></div>
-                <div id="epsilon"></div>
-                <div id="phi"></div>
+                <div class="alpha"></div>
+                <div class="lambda"></div>
+                <div class="epsilon"></div>
+                <div class="phi"></div>
             </div>
         </section>
         <section id="introducao">
