--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -27,11 +27,12 @@
     </header>
     <main>
         <section class="home-main-banner">
-            <div class="alfbt" id="alfbt">
+            <div class="logo-alef"></div>
+            <div class="alfbt" id="alfbt" hidden>
                 <div class="alpha"></div>
-                <div class="lambda"></div>
-                <div class="epsilon"></div>
-                <div class="phi"></div>
+                <div class="lambda" hidden></div>
+                <div class="epsilon" hidden></div>
+                <div class="phi" hidden></div>
             </div>
         </section>
         <section id="introducao">
