--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -28,11 +28,11 @@
     <main>
         <section class="home-main-banner">
             <div class="logo-alef"></div>
-            <div class="alfbt" id="alfbt" hidden>
+            <div class="alfbt" id="alfbt" >
                 <div class="alpha"></div>
-                <div class="lambda" hidden></div>
-                <div class="epsilon" hidden></div>
-                <div class="phi" hidden></div>
+                <div class="lambda"></div>
+                <div class="epsilon"></div>
+                <div class="phi"></div>
             </div>
         </section>
         <section id="introducao">
