--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -34,6 +34,11 @@
                 <div class="epsilon"></div>
                 <div class="phi"></div>
             </div>
+
+            <div class="phrase">
+                <h3>Proporcionando um novo</h3>
+                <h1>Futuro</h1>
+            </div>
         </section>
         <section id="introducao">
                 <h2 class="h1">Olá,</h2>
