--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -40,11 +40,14 @@
                 <h1>Futuro</h1>
             </div>
         </section>
-        <section id="introducao">
-                <h2 class="h1">Olá,</h2>
-                <p>sou Alef, iniciante na área de desenvolvimento Fron-End.</p>
-                <p>Trabalho atualmente com desenvolvimento web.</p>
-                <p></p>
+        <section class="introducao">
+                <img src="" alt="">
+                <div>
+                    <h2 class="h1">Olá,</h2>
+                    <p>sou Alef, iniciante na área de desenvolvimento Fron-End.</p>
+                    <p>Trabalho atualmente com desenvolvimento web.</p>
+                    <p></p>
+                </div>
         </section>
 
         <!-- End // Home About -->
