--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section class="introducao">
-                <img src="" alt="">
+                <img src="imagens/me.png" alt="Alef" class="imgMe">
                 <div>
                     <h2 class="h1">Olá,</h2>
                     <p>sou Alef, iniciante na área de desenvolvimento Fron-End.</p>
@@ -68,14 +68,14 @@
                             <li>CSS3</li>
                         </div>
                         <div>
-                            <li>Saas</li>
+                            <li><img src="imagens/" alt="">  Saas</li>
                         </div>
                     </div>
                     <div class="setas" disabled>
 
                     </div>
                 </div>
-                <div class="bottons">
+                <div class="bottons" hidden>
                     <input type="radio" name="sk-op" id="button" value="1e">
                     <input type="radio" id="button" name="sk-op" value="2m">
                     <input type="radio" name="sk-op" id="button" value="3d" checked>
@@ -85,7 +85,7 @@
             <!-- End// Skills -->
         </section>
 
-        <section id="o-que-faco">
+        <section class="o-que-faco">
             <h1>O que faço</h1>
             <p>serviços e soluções</p>
             <h2>Desenvolvimento Web</h2>
