--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -59,16 +59,23 @@
                 <div>
                     <div>
                         <div>
-                            <li>JavaScript</li>
+                            <li>
+                                <img src="imagens/img/icon-javascript2.png" alt="JavaScript"> JavaScript
+                            </li>
                         </div>
                         <div>
-                            <li>HTML5</li>
+                            <li>
+                                <img src="imagens/img/icon-html.png" alt="HTML5"> HTML5</li>
                         </div>
                         <div>
-                            <li>CSS3</li>
+                            <li>
+                                <img src="imagens/img/icon-css.png" alt="CSS3"> CSS3
+                            </li>
                         </div>
                         <div>
-                            <li><img src="imagens/" alt="">  Saas</li>
+                            <li>
+                                <img src="imagens/img/icon-sass.png" alt="saas"> Saas
+                            </li>
                         </div>
                     </div>
                     <div class="setas" disabled>
@@ -76,9 +83,9 @@
                     </div>
                 </div>
                 <div class="bottons" hidden>
-                    <input type="radio" name="sk-op" id="button" value="1e">
-                    <input type="radio" id="button" name="sk-op" value="2m">
-                    <input type="radio" name="sk-op" id="button" value="3d" checked>
+                    <input type="radio" name="sk-op" id="button" value="1e" hidden>
+                    <input type="radio" id="button" name="sk-op" value="2m" hidden>
+                    <input type="radio" name="sk-op" id="button" value="3d" checked hidden>
                 </div>
                 
             </ul>
