--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -17,11 +17,9 @@
         <div id="menuNav" class="hidden">
             <ol>
                 <a href="#" class="navs">HOME</a>
-                <a href="#" class="navs">QUEM SOU</a>
-                <a href="#" class="navs">O QUE FAÇO</a>
-                <a href="#" class="navs">PORTFÓLIO</a>
-                <a href="#" class="navs">VLOG</a>
-                <a href="#" class="navs">FALE CONOSCO</a>
+                <a href="#quem-sou" class="navs">QUEM SOU</a>
+                <a href="#portfolio" class="navs">PORTFÓLIO</a>
+                <a href="#" class="navs">FALE COMIGO</a>
             </ol>
         </div>
     </header>
@@ -42,7 +40,7 @@
         </section>
         <section class="introducao">
                 <img src="imagens/me.png" alt="Alef" class="imgMe">
-                <div>
+                <div id="quem-sou">
                     <h2 class="h1">Olá,</h2>
                     <p>sou Alef, iniciante na área de desenvolvimento Fron-End.</p>
                     <p>Trabalho atualmente com desenvolvimento web.</p>
@@ -92,14 +90,21 @@
             <!-- End// Skills -->
         </section>
 
-        <section class="o-que-faco">
+        <section class="o-que-faco" hidden>
             <h1>O que faço</h1>
             <p>serviços e soluções</p>
             <h2>Desenvolvimento Web</h2>
         </section>
 
-        <section id="Portfolio">
-            ###
+        <section id="portfolio">
+            <h2>Portfólio</h2>
+            <p>CONHEÇA MEUS PROJETOS</p>
+            <div class="portfolio"> 
+                <div class="number1">EM BREVE</div>
+                <div class="number2">EM BREVE</div>
+                <div class="number3">EM BREVE</div>
+                <div class="number4">EM BREVE</div>
+            </div>
         </section>
     </main>
     <footer>
