--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -63,7 +63,8 @@
                         </div>
                         <div>
                             <li>
-                                <img src="imagens/img/icon-html.png" alt="HTML5"> HTML5</li>
+                                <img src="imagens/img/icon-html.png" alt="HTML5"> HTML5
+                            </li>
                         </div>
                         <div>
                             <li>
