--- a/portifolio3/index.html
+++ b/portifolio3/index.html
@@ -33,9 +33,9 @@
                 <div class="phi"></div>
             </div>
 
-            <div class="phrase">
-                <h3>Proporcionando um novo</h3>
-                <h1>Futuro</h1>
+            <div class="phrase"hidden>
+                <h3 hidden>Proporcionando um novo</h3>
+                <h1 hidden>Futuro</h1>
             </div>
         </section>
         <section class="introducao">
